<resources>
    <string name="app_name">Moovster</string>
    <string name="title_home">Home</string>
    <string name="title_favs">Favourites</string>
    <string name="title_profile">Profile</string>
    <string name="btnFilter">Filter</string>
    <string name="showMovieInfoYear">Year:</string>
    <string name="showMovieInfoGenres">Genres:</string>
    <string name="showMovieInfoDuration">Duration:</string>
    <string name="showMovieInfoOverview">Overview:</string>
    <string name="Register">Sing Up</string>
    <string name="Login">Login</string>
    <string name="name_field">Name</string>
    <string name="born_date">Born Date</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="required">Required</string>
    <string name="moovsterRegister">Moovster Register</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="pending">Pending Movies</string>
    <string name="Likes">Manage my Preferences</string>
    <string name="emailHelper">Enter a valid email address</string>
    <string name="existingUser">there is already a registered user with that email address</string>
    <string name="registerSuccesfull">Registration Successful, now you can log in.</string>
    <string name="dataWarning">Please enter the required data correctly</string>
    <string name="loginSuccesfull">You are successfully logged in</string>
    <string name="loginWarning">There is no user registered with this credentials.</string>
    <string name="not_available_functionality">Just user logged can use this function</string>
    <string name="SearchHint">Search...</string>
    <string name="Search_title_text">Search with filters</string>
    <string name="Genres">Genres</string>
    <string name="Year">Year</string>
    <string name="filter_by_year">Apply this filter</string>
    <string name="logoutSuccesfull">You are successfully logged out</string>
    <string name="in_fav">In favs</string>
    <string name="out_favs">Add to favs</string>
    <string name="user_roles">User roles</string>



</resources>