<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.user_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_color"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:gravity="center"
        android:padding="35dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight="0"
            android:src="@drawable/moovster">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moovsterRegister"
            android:textColor="@color/icons_color"
            android:textStyle="bold"
            android:textSize="20dp"
            ></TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerNameC"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/icons_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/moovster"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerName"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="text"
                android:hint="@string/name_field"

                ></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerEmailC"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/icons_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEmail"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="textEmailAddress"
                android:hint="@string/email"

                ></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerPasswordC"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/icons_color"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:counterTextColor="@color/alice_purple"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:background="@color/white"
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="textPassword"
                android:hint="@string/password"

                ></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSingUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/base_purple"
            android:minWidth="300dp"
            android:onClick="RegisterUser"
            android:text="@string/Register"
            android:textSize="10sp"
            app:icon="@drawable/user"
            app:iconPadding="0dp"
            app:iconSize="30dp"
            app:iconTint="@color/icons_color" />

    </LinearLayout>

</FrameLayout>