<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFF"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <fragment
        android:id="@+id/fragmentNavBarView"
        android:name="edu.unicauca.moovster.ui.movies.show_movie_info_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:ignore="MissingConstraints"
        android:padding="20dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@color/base_purple"
            app:cardCornerRadius="20dp"
            app:cardElevation="16dp"
            app:contentPadding="10dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/infoProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/userPicture"
                        android:layout_width="90dp"
                        android:layout_height="70dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_weight="0"
                        android:src="@drawable/user"
                        app:tint="@color/icons_color" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/profile_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="Nombre"
                            android:textColor="@color/letter_white"
                            android:textSize="15dp"
                            android:textStyle="bold"></TextView>
                        <TextView
                            android:id="@+id/profile_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="Email"
                            android:textColor="@color/letter_white"
                            android:textSize="15dp"
                            android:textStyle="bold"></TextView>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            >
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_weight="0"
                android:src="@drawable/movies"
                app:tint="@color/icons_color" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="7dp"
                android:text="@string/movies"
                android:textColor="@color/letter_white"
                android:textSize="15dp"
                android:textStyle="bold"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            >
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_weight="0"
                android:src="@drawable/series"
                app:tint="@color/icons_color" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="7dp"
                android:text="@string/series"
                android:textColor="@color/letter_white"
                android:textSize="15dp"
                android:textStyle="bold"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            >
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_weight="0"
                android:src="@drawable/favorites"
                app:tint="@color/icons_color" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="7dp"
                android:text="@string/title_favs"
                android:textColor="@color/letter_white"
                android:textSize="15dp"
                android:textStyle="bold"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            >
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_weight="0"
                android:src="@drawable/check_list"
                app:tint="@color/icons_color" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="7dp"
                android:text="@string/pending"
                android:textColor="@color/letter_white"
                android:textSize="15dp"
                android:textStyle="bold"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            >
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_weight="0"
                android:src="@drawable/love"
                app:tint="@color/icons_color" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="7dp"
                android:text="@string/Likes"
                android:textColor="@color/letter_white"
                android:textSize="15dp"
                android:textStyle="bold"></TextView>
        </LinearLayout>


    </LinearLayout>


</FrameLayout>